# verbage

./: .env.example  .gitignore  README-dialogbot.md  README.md  app.js  bot.py  check.py  estimate.py  pyproject.toml  tutorial.md
deploy/: deploy.sh  dialog-bot.service
dialogbot/: __init__.py  config.py  discord_io.py  expressions.py  io.py  local_io.py  model.py  parser.py  runtime.py
docs/: architecture.md  deployment.md  index.md  language_syntax.md  local-testing.md  runtime-semantics.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
game/: act_1.script  characters.script  interior.script  language_proposal.md  main.script
game_example/: interior.script  language_proposal.md  main.script
game_tutorial/: README.md  main.script
tests/: test_bot_config.py  test_config.py  test_estimate.py  test_scripts.py
