# Copyright (C) 2026 Placeholder Name
# SPDX-License-Identifier: GPL-3.0-only

[project]
name = "dialog-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "discord.py>=2.4,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dialogbot*"]
